--- a/app/src/index.html
+++ b/app/src/index.html
@@ -4,24 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>InWe</title>
+    <title>InWeWallet</title>
 </head>
 
-<body style="-webkit-app-region: drag">
+<body>
     <div id="root"></div>
-    <!-- <div class='glob-message'>
-        <div class='glob-message-bg'></div>
-        <div class="glob-message-cont">
-            <div class="glob-message-container">
-                <div class='glob-message-text'>sdsadsa</div>
-                <div class="global-message-btn">
-                    <span class="btn cannel">取消</span>
-                    <span class="btn sure">确定</span>
-                </div>
-            </div>
-            <div class="glob-message-warn">ssss</div>
-        </div>
-    </div> -->
     <script type="text/javascript" src="./mainfest/vendor.dll.js"></script>
     <script>
         // window.ipc = require("electron").ipcRenderer;
