--- a/app/src/index.html
+++ b/app/src/index.html
@@ -16,6 +16,7 @@
         // window.clipboard = require('electron').clipboard;
         var electron = require('electron')
         window.clipboard = electron.clipboard;
+        var fs = require('fs');
     </script>
 
 
