--- a/app/src/index.html
+++ b/app/src/index.html
@@ -10,7 +10,8 @@
     <title>InWeWallet</title>
 </head>
 
-<body style="-webkit-app-region: drag">
+<body >
+    <div style="-webkit-app-region: drag;position: fixed;top: 0;left: 0;width: 100%;height: .2rem;z-index:100000;point-event:none;" ></div>
     <div id="root"></div>
     <script type="text/javascript" src="./mainfest/vendor.dll.js "></script>
     <script>
@@ -57,6 +58,7 @@
                 localStorage.removeItem('lastPage');
             }
         })()
+
     </script>
 </body>
 
