--- a/app/src/index.html
+++ b/app/src/index.html
@@ -10,12 +10,12 @@
     <title>InWeWallet</title>
 </head>
 
-<body >
-    <div style="-webkit-app-region: drag;position: fixed;top: 0;left: 0;width: 100%;height: .2rem;z-index:100000;point-event:none;" ></div>
+<body>
+    <div style="-webkit-app-region: drag;position: fixed;top: 0;left: 0;width: 100%;height: .2rem;z-index:100000;point-event:none;"></div>
     <div id="root"></div>
     <script type="text/javascript" src="./mainfest/vendor.dll.js "></script>
     <script>
-        var electron = require("electron")
+        var electron = require("electron");
         var fs = require('fs');
         var os = require('os');
         var path = require('path')
