--- a/app/src/index.html
+++ b/app/src/index.html
@@ -47,7 +47,10 @@
             }
         })
         window.onhashchange = function () {
-            window.localStorage.setItem('lastPage', window.location.href)
+            if (window.location.href.indexOf('print') != -1) {
+                window.localStorage.setItem('lastPage', window.location.href)
+            }
+
         }
         let network = localStorage.getItem('isDev')
         if (!network || !JSON.parse(network)) {
@@ -57,9 +60,11 @@
         }
         (function () {
             var lastpage = localStorage.getItem('lastPage');
-            if (lastpage && lastpage.length > 0) {
-                window.location.href = lastpage;
-                localStorage.removeItem('lastPage');
+            if (lastpage && lastpage.indexOf('print') != -1) {
+                if (lastpage && lastpage.length > 0) {
+                    window.location.href = lastpage;
+                    localStorage.removeItem('lastPage');
+                }
             }
         })()
 
