--- a/app/src/index.html
+++ b/app/src/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div style="-webkit-app-region: drag;position: fixed;top: 0;left: 0;width: 100%;height: .2rem;z-index:100000;point-event:none;"></div>
+    <div style="-webkit-app-region: drag;position: fixed;top: 0;left: 0;width: 100%;height: .2rem;z-index:100000;pointer-events:none;"></div>
     <div id="root"></div>
     <script type="text/javascript" src="./mainfest/vendor.dll.js "></script>
     <script>
@@ -20,7 +20,13 @@
         var os = require('os');
         var path = require('path')
         var cp = require("child_process");
+        window.log4js = require('log4js');
         let el = document.getElementById('root');
+        log4js.configure({
+            appenders: { cheese: { type: 'file', filename: path.join(os.tmpdir(), 'inwewallet/debug/cheese.log') } },
+            categories: { default: { appenders: ['cheese'], level: 'info' } }
+        });
+        const logger = log4js.getLogger('cheese');
         window.webFrame = electron.webFrame
         window.ipc = electron.ipcRenderer;
         window.shell = electron.shell;
@@ -97,7 +103,6 @@
         } else {
             ipc.send('loadNetwok', 'test');
         }
-
 
     </script>
 </body>
